# substate-academy

./: Cargo.toml
src/: day1.rs  day2.rs  main.rs
src/day2/: vrf.rs
src/day2/vrf/: player.rs  vrfcore.rs
