[package]
name = "rs-helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
hex-literal = "0.3.4"
merlin = "3.0.0"
schnorrkel = "0.10.2"
rand_core = "0.6.3"
hex = "0.4.3"

